--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ Django==1.10.1
 requests==2.10.0
 gunicorn==19.6.0
 raven==4.2.3
-tsuru_dashboard==0.4.0-rc1
+tsuru_dashboard==0.4.1
 pymongo==3.3.0
 PyYAML==3.11
